--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -106,7 +106,7 @@
                                     j++;
                                     <tr>
                                         <td>@item.MaLHP</td>
-                                        <td>@item.TenHP</td>
+                                        <td>@item.HocPhan.TenHP</td>
                                         <td>@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.Phong)</td>
                                         <td>
                                             @if (j == 4 || j == 6)
