--- a/Views/ClassSection/QuanLyLopHoc.cshtml
+++ b/Views/ClassSection/QuanLyLopHoc.cshtml
@@ -103,7 +103,7 @@
                                 {
                                     <tr>
                                         <td>@item.MaLHP</td>
-                                        <td>@item.TenHP</td>
+                                        <td>@item.HocPhan.TenHP</td>
                                         <td>@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.Phong)</td>
                                         <td>0</td>
                                         <td class="text-nowrap">
@@ -160,7 +160,7 @@
 
                             <h5>Lớp HP: 221_71ITBS10103_01 - Nhập môn công nghệ thông tin</h5>
                             <h5>GV: Lê Thị Hồng</h5>
-                            <h5>Sỉ Số: 0/20</h5>
+                            <h5>Sĩ Số: 20/20</h5>
                         </div>
                         <div class="col-12">
                             <hr class="my-4" />
