--- a/Views/TeachingAssistant/Advances.cshtml
+++ b/Views/TeachingAssistant/Advances.cshtml
@@ -130,7 +130,7 @@
                                         <td valign="middle">
                                             Mã: @item.MaLHP
                                             <br />
-                                            Tên: @item.TenHP
+                                            Tên: @item.HocPhan.TenHP
                                             <br />
                                             Loại: @if (item.LoaiHP.ToLower().Equals("lý thuyết"))
                                             {
