--- a/Views/TeachingAssistant/Assgined.cshtml
+++ b/Views/TeachingAssistant/Assgined.cshtml
@@ -139,7 +139,7 @@
                                         <td valign="middle" class="text-nowrap">
                                             Mã: @item.MaLHP
                                             <br />
-                                            Tên: @item.TenHP
+                                            Tên: @item.HocPhan.TenHP
                                         </td>
                                         <td valign="middle">
                                             @if (item.MaLHP.Length == 18)
