--- a/Views/TimeTable/_FilterParentData.cshtml
+++ b/Views/TimeTable/_FilterParentData.cshtml
@@ -17,7 +17,7 @@
                 <select class="form-select" id="locmonhoc" placeholder="Lọc giảng viên" multiple="multiple">
                     @foreach (var item in lstTkb.GroupBy(o => o.MaMH).ToList())
                     {
-                        var items = item.Select(s => new { s.TenHP, s.MaMH }).First();
+                        var items = item.Select(s => new { s.HocPhan.TenHP, s.MaMH }).First();
                         <option selected value="@items.MaMH">@items.TenHP</option>
                     }
                 </select>
@@ -78,14 +78,14 @@
                 @foreach (var item in lstTkb.GroupBy(g => g.MaMH))
                 {
                     <tr>
-                        <td class="bg-secondary text-white" style="box-shadow: inset -1px -1px 0 #ffffff; padding: 10px; white-space: normal; min-width: 140px !important; max-width: 200px; word-break: break-word; position: sticky; left: 0;" valign="middle">@item.Select(s => new { s.TenHP }).First().TenHP</td>
+                        <td class="bg-secondary text-white" style="box-shadow: inset -1px -1px 0 #ffffff; padding: 10px; white-space: normal; min-width: 140px !important; max-width: 200px; word-break: break-word; position: sticky; left: 0;" valign="middle">@item.Select(s => new { s.HocPhan.TenHP }).First().TenHP</td>
                         @for (int i = 0; i < 7; i++)
                         {
                             for (int j = 0; j < 5; j++)
                             {
                                 if (j == 0) // 1-3
                                 {
-                                    var lstTkbs = lstTkb.Where(w => w.TenHP.ToLower().Equals(item.Select(s => new { s.TenHP }).First().TenHP.ToLower()) && (w.TietBD.Equals("1") || w.TietS.Equals("1")) && w.ThuS.Equals((i + 2).ToString())).ToList();
+                                    var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 1 || w.TietS == 1) && w.ThuS == (i + 2)).ToList();
                                     if (lstTkbs.Count > 0)
                                     {
                                         <td style="padding: 10px;">
@@ -93,11 +93,11 @@
                                             {
                                                 if (items.LoaiHP.ToLower().Equals("thực hành"))
                                                 {
-                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
                                                 }
                                                 else
                                                 {
-                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
                                                 }
                                             }
                                         </td>
@@ -109,7 +109,7 @@
                                 }
                                 else if (j == 1) //4-6
                                 {
-                                    var lstTkbs = lstTkb.Where(w => w.TenHP.ToLower().Equals(item.Select(s => new { s.TenHP }).First().TenHP.ToLower()) && (w.TietBD.Equals("4") || w.TietS.Equals("4")) && w.ThuS.Equals((i + 2).ToString())).ToList();
+                                    var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 4 || w.TietS == 4) && w.ThuS == (i + 2)).ToList();
                                     if (lstTkbs.Count > 0)
                                     {
                                         <td style="padding: 10px;">
@@ -118,11 +118,11 @@
                                             {
                                                 if (items.LoaiHP.ToLower().Equals("thực hành"))
                                                 {
-                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
                                                 }
                                                 else
                                                 {
-                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
                                                 }
                                             }
                                         </td>
@@ -134,7 +134,7 @@
                                 }
                                 else if (j == 2) //7-9
                                 {
-                                    var lstTkbs = lstTkb.Where(w => w.TenHP.ToLower().Equals(item.Select(s => new { s.TenHP }).First().TenHP.ToLower()) && (w.TietBD.Equals("7") || w.TietS.Equals("7")) && w.ThuS.Equals((i + 2).ToString())).ToList();
+                                    var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 7 || w.TietS == 7) && w.ThuS == (i + 2)).ToList();
                                     if (lstTkbs.Count > 0)
                                     {
                                         <td style="padding: 10px;">
@@ -143,11 +143,11 @@
                                             {
                                                 if (items.LoaiHP.ToLower().Equals("thực hành"))
                                                 {
-                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
                                                 }
                                                 else
                                                 {
-                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
                                                 }
                                             }
                                         </td>
@@ -159,7 +159,7 @@
                                 }
                                 else if (j == 3) //10-12
                                 {
-                                    var lstTkbs = lstTkb.Where(w => w.TenHP.ToLower().Equals(item.Select(s => new { s.TenHP }).First().TenHP.ToLower()) && (w.TietBD.Equals("10") || w.TietS.Equals("10")) && w.ThuS.Equals((i + 2).ToString())).ToList();
+                                    var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 10 || w.TietS == 10) && w.ThuS == (i + 2)).ToList();
                                     if (lstTkbs.Count > 0)
                                     {
                                         <td style="padding: 10px;">
@@ -168,11 +168,11 @@
                                             {
                                                 if (items.LoaiHP.ToLower().Equals("thực hành"))
                                                 {
-                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
                                                 }
                                                 else
                                                 {
-                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                                    <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
                                                 }
                                             }
                                         </td>
@@ -184,7 +184,7 @@
                                 }
                                 else if (j == 4) //13-15
                                 {
-                                    var lstTkbs = lstTkb.Where(w => w.TenHP.ToLower().Equals(item.Select(s => new { s.TenHP }).First().TenHP.ToLower()) && (w.TietBD.Equals("13") || w.TietS.Equals("13")) && w.ThuS.Equals((i + 2).ToString())).ToList();
+                                    var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 13 || w.TietS == 13) && w.ThuS == (i + 2)).ToList();
                                     if (i == 6)
                                     {
 
@@ -196,11 +196,11 @@
                                                 {
                                                     if (items.LoaiHP.ToLower().Equals("thực hành"))
                                                     {
-                                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
                                                     }
                                                     else
                                                     {
-                                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
                                                     }
                                                 }
                                             </td>
@@ -220,11 +220,11 @@
                                                 {
                                                     if (items.LoaiHP.ToLower().Equals("thực hành"))
                                                     {
-                                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
                                                     }
                                                     else
                                                     {
-                                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
                                                     }
                                                 }
                                             </td>
