--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -1,32 +1,34 @@
 ﻿@using QuanLyCongTacTroGiangKhoaCNTT.Models
 @{
     CongTacTroGiangKhoaCNTTEntities model = new CongTacTroGiangKhoaCNTTEntities();
-    var role = model.TaiKhoan.FirstOrDefault(f => f.Email.ToLower().Equals(User.Identity.Name.ToLower()));
-    if (role != null)
+    var users = model.TaiKhoan.FirstOrDefault(f => f.Email.ToLower().Equals(User.Identity.Name.ToLower()));
+    if (users != null)
     {
-        Session["user-id"] = role.ID;
-        Session["user-email"] = role.Email;
-        Session["user-name"] = role.HoTen;
-        Session["user-role-name"] = role.Quyen.name;
-        Session["user-role-id"] = role.ID_Quyen;
+        int roleId = Int32.Parse(users.AspNetUsers.AspNetRoles.First().Id);
 
-        if (role.ID_Quyen == 1)
+        Session["user-id"] = users.ID;
+        Session["user-email"] = users.Email;
+        Session["user-name"] = users.HoTen;
+        Session["user-role-name"] = users.AspNetUsers.AspNetRoles.First().Name;
+        Session["user-role-id"] = roleId;
+
+        if (roleId == 1)
         {
             Session["layout"] = "~/Views/Shared/_StudentLayout.cshtml";
         }
-        else if (role.ID_Quyen == 3)
+        else if (roleId == 2)
         {
             Session["layout"] = "~/Views/Shared/_TeacherLayout.cshtml";
         }
-        else if (role.ID_Quyen == 4)
+        else if (roleId == 3)
         {
             Session["layout"] = "~/Views/Shared/_DepartmentLayout.cshtml";
         }
-        else if (role.ID_Quyen == 5)
+        else if (roleId == 4)
         {
             Session["layout"] = "~/Views/Shared/_TALayout.cshtml";
         }
-        else if (role.ID_Quyen == 6)
+        else if (roleId == 5)
         {
             Session["layout"] = "~/Views/Shared/_OfficeOfTrainingLayout.cshtml";
         }
