Update view dashboard

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -27,7 +27,11 @@
                         </nav>
                     </div>
                     <div class="d-flex">
-                        <select class="form-control form-select">
+                        <select class="selectpicker me-3 w-100">
+                            <option>Công Nghệ Thông Tin</option>
+                            <option>Kỹ Thuật Phần Mềm</option>
+                        </select>
+                        <select class="selectpicker me-3 w-100">
                             <option>Năm 2020 - 2023</option>
                             <option>Năm 2024 - 2027</option>
                         </select>
