--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -107,7 +107,7 @@
                                     <tr>
                                         <td>@item.MaLHP</td>
                                         <td>@item.HocPhan.TenHP</td>
-                                        <td>@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.Phong)</td>
+                                        <td>@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.Phong.TenPhong)</td>
                                         <td>
                                             @if (j == 4 || j == 6)
                                             {
