--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
     <title>Công Tác Trợ Giảng Khoa CNTT</title>
 </head>
 
-<body style="background-image: url(/Content/img/img_login_background.jpg); background-size: cover">
+<body style="background-image: url(@Url.Content("~/Content/img/img_login_background.jpg")); background-size: cover">
     <main>
         <section class="container d-flex flex-column">
             <div class="row align-items-center justify-content-center g-0 min-vh-100">
