--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
     <div id="db-wrapper">
         <!-- navbar vertical -->
         <!-- Sidebar -->
-        <nav class="navbar-vertical navbar" style="background-image: url(/Content/img/img_sidebar_background.jpg); background-size: cover">
+        <nav class="navbar-vertical navbar" style="background-image: url(@Url.Content("~/Content/img/img_sidebar_background.jpg")); background-size: cover">
             <div class="vh-100" data-simplebar>
                 <!-- Brand logo -->
                 <a class="navbar-brand" style="filter: unset !important" href="@Url.Action("index","Dashboard")">
