--- a/Views/TeachingAssistant/ResultApply.cshtml
+++ b/Views/TeachingAssistant/ResultApply.cshtml
@@ -111,8 +111,8 @@
                                 {
                                     <tr>
                                         <td valign="middle">@item.MaLHP</td>
-                                        <td valign="middle">@item.HocPhan.TenHP</td>
-                                        <td valign="middle">@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.Phong.TenPhong)</td>
+                                        <td valign="middle">@item.LopHocPhan.TenHP</td>
+                                        <td valign="middle">@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.TenPhong)</td>
                                         <td valign="middle">@item.SoTietDaXep</td>
                                         <td valign="middle" class="text-nowrap">
                                             <span class="badge bg-warning"><i class="bi bi-ban me-2"></i>Chưa duyệt</span>
