--- a/Views/TimeTable/_Export.cshtml
+++ b/Views/TimeTable/_Export.cshtml
@@ -50,22 +50,22 @@
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.MaGocLHP</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.MaMH</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.MaLHP</td>
-                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.HocPhan.TenHP</td>
-                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.HocPhan.SoTC</td>
+                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.LopHocPhan.TenHP</td>
+                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.SoTC</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.LoaiHP</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@foreach (string items in item.MaLop.Split('#').ToList()){ i++; @(items) if(i < lastIndex.Count) { <br style="mso-data-placement:same-cell;" />}}</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.TSMH</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.SoTietDaXep</td>
-                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.Phong.PH</td>
+                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.PH</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.Thu</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.TietBD</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.SoTiet</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.TietHoc</td>
-                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.Phong</td>
-                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.MaCBGD</td>
-                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.TenCBGD</td>
-                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.Phong.PH_X</td>
-                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.Phong.SucChua</td>
+                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.TenPhong</td>
+                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.LopHocPhan.MaCBGD</td>
+                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.LopHocPhan.TenCBGD</td>
+                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.PH_X</td>
+                <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.SucChua</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.SiSoTKB</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.Trong</td>
                 <td style="border: 1px solid #adadad; border-collapse: collapse;">@item.TinhTrangLHP</td>
