--- a/Views/TimeTable/_FilterData.cshtml
+++ b/Views/TimeTable/_FilterData.cshtml
@@ -6,14 +6,14 @@
     @foreach (var item in lstTkb.GroupBy(g => g.MaMH))
     {
         <tr>
-            <td class="bg-secondary text-white" style="box-shadow: inset -1px -1px 0 #ffffff; padding: 10px; white-space: normal; min-width: 140px !important; max-width: 200px; word-break: break-word; position: sticky; left: 0;" valign="middle">@item.Select(s => new { s.HocPhan.TenHP }).First().TenHP</td>
+            <td class="bg-secondary text-white" style="box-shadow: inset -1px -1px 0 #ffffff; padding: 10px; white-space: normal; min-width: 140px !important; max-width: 200px; word-break: break-word; position: sticky; left: 0;" valign="middle">@item.Select(s => new { s.LopHocPhan.TenHP }).First().TenHP</td>
             @for (int i = 0; i < 7; i++)
             {
                 for (int j = 0; j < 5; j++)
                 {
                     if (j == 0) // 1-3
                     {
-                        var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 1 || w.TietS == 1) && w.ThuS == (i + 2)).ToList();
+                        var lstTkbs = lstTkb.Where(w => w.LopHocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.LopHocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 1 || w.TietS == 1) && w.ThuS == (i + 2)).ToList();
                         if (lstTkbs.Count > 0)
                         {
                             <td style="padding: 10px;">
@@ -21,11 +21,11 @@
                                 {
                                     if (items.LoaiHP.ToLower().Equals("thực hành"))
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                     else
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                 }
                             </td>
@@ -37,7 +37,7 @@
                     }
                     else if (j == 1) //4-6
                     {
-                        var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 4 || w.TietS == 4) && w.ThuS == (i + 2)).ToList();
+                        var lstTkbs = lstTkb.Where(w => w.LopHocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.LopHocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 4 || w.TietS == 4) && w.ThuS == (i + 2)).ToList();
                         if (lstTkbs.Count > 0)
                         {
                             <td style="padding: 10px;">
@@ -46,11 +46,11 @@
                                 {
                                     if (items.LoaiHP.ToLower().Equals("thực hành"))
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                     else
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                 }
                             </td>
@@ -62,7 +62,7 @@
                     }
                     else if (j == 2) //7-9
                     {
-                        var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 7 || w.TietS == 7) && w.ThuS == (i + 2)).ToList();
+                        var lstTkbs = lstTkb.Where(w => w.LopHocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.LopHocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 7 || w.TietS == 7) && w.ThuS == (i + 2)).ToList();
                         if (lstTkbs.Count > 0)
                         {
                             <td style="padding: 10px;">
@@ -71,11 +71,11 @@
                                 {
                                     if (items.LoaiHP.ToLower().Equals("thực hành"))
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                     else
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                 }
                             </td>
@@ -87,7 +87,7 @@
                     }
                     else if (j == 3) //10-12
                     {
-                        var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 10 || w.TietS == 10) && w.ThuS == (i + 2)).ToList();
+                        var lstTkbs = lstTkb.Where(w => w.LopHocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.LopHocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 10 || w.TietS == 10) && w.ThuS == (i + 2)).ToList();
                         if (lstTkbs.Count > 0)
                         {
                             <td style="padding: 10px;">
@@ -96,11 +96,11 @@
                                 {
                                     if (items.LoaiHP.ToLower().Equals("thực hành"))
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                     else
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                 }
                             </td>
@@ -112,7 +112,7 @@
                     }
                     else if (j == 4) //13-15
                     {
-                        var lstTkbs = lstTkb.Where(w => w.HocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.HocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 13 || w.TietS == 13) && w.ThuS == (i + 2)).ToList();
+                        var lstTkbs = lstTkb.Where(w => w.LopHocPhan.TenHP.ToLower().Equals(item.Select(s => new { s.LopHocPhan.TenHP }).First().TenHP.ToLower()) && (w.TietBD == 13 || w.TietS == 13) && w.ThuS == (i + 2)).ToList();
                         if (i == 6)
                         {
 
@@ -124,11 +124,11 @@
                                     {
                                         if (items.LoaiHP.ToLower().Equals("thực hành"))
                                         {
-                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                         }
                                         else
                                         {
-                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                         }
                                     }
                                 </td>
@@ -148,11 +148,11 @@
                                     {
                                         if (items.LoaiHP.ToLower().Equals("thực hành"))
                                         {
-                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.TenCBGD</span></p>
+                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                         }
                                         else
                                         {
-                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.TenCBGD</span></p>
+                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                         }
                                     }
                                 </td>
